@@ -110,6 +110,6 @@ end
 
 # Use the inflector below to pluralize "error" from
 # @@default_error_messages[:error_translation] above (if necessary)
-Inflector.inflections do |inflect|
+( ( ActiveSupport::Inflector if ActiveSupport.const_defined?(:Inflector) ) || Inflector ).inflections do |inflect|
   inflect.uncountable %w( feil )
 end
